# dbt-snowflake-DE

./: README.md  pyproject.toml
dbt_snowflake_de/: README.md  dbt_project.yml  profiles.example.yml
dbt_snowflake_de/data_tests/: fact_orders_date.sql  fact_orders_discount.sql
dbt_snowflake_de/models/marts/: fact_orders.sql  generic_tests.yml  int_order_items.sql
dbt_snowflake_de/models/staging/: stg_tpch_line_items.sql  stg_tpch_orders.sql  tpch_sources.yml
