[tool.poetry]
name = "dbt-snowflake-de"
version = "0.1.0"
description = "Data pipeline project using dbt and snowflake"
authors = ["\"\""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-snowflake = "^1.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
